--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -146,6 +146,11 @@ h4 {
     border-color: #fff;
 }
 
+.btn-dama-blue {
+    background-color: #cdefef;
+    border-color: #fff;
+}
+
 /* DamaShopWeb App Header */
 .top-nav {
     background-color: #5fcbcb;
