Backoffice role Management Created

--- a/src/Backoffice/Pages/_LoginPartial.cshtml
+++ b/src/Backoffice/Pages/_LoginPartial.cshtml
@@ -3,6 +3,10 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
+
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
@@ -10,7 +14,10 @@
             <li>
                 <a asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
-            <li><a asp-page="/Account/Register">Register</a></li>
+            @if (await UserManager.IsInRoleAsync(user, "Admin"))
+            {
+                <li><a asp-page="/Account/Register">Register</a></li>
+            }
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
@@ -19,7 +26,7 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">        
+    <ul class="nav navbar-nav navbar-right">
         <li><a asp-page="/Account/Login">Log in</a></li>
     </ul>
 }
