--- a/src/Web/wwwroot/css/catalog/pager.css
+++ b/src/Web/wwwroot/css/catalog/pager.css
@@ -22,7 +22,7 @@
     }
 
     .esh-pager-item--navigable:hover {
-        color: #83D01B;
+        color: #ef7e8e;
     }
 
 @media screen and (max-width: 1280px) {
