--- a/src/Web/Pages/Category/Type/Index.cshtml
+++ b/src/Web/Pages/Category/Type/Index.cshtml
@@ -10,8 +10,17 @@
     <h2>Todos os Produtos</h2>
     <img class="separator" src="~/images/coração-rosa.png" />
 </div>
+<section class="esh-catalog-filters">
+    <div class="container">
+        <form method="get">
+            <label class="esh-catalog-label" data-title="ilustração">
+                <select asp-for="@Model.CatalogModel.IllustrationFilterApplied" asp-items="@Model.CatalogModel.Illustrations" class="esh-catalog-filter"></select>
+            </label>
+            <input class="esh-catalog-send pt-sm-1" type="image" src="/images/arrow-right.svg" />
+        </form>
+    </div>
+</section>
 <div class="container">
-
     <div class="esh-catalog-items row">
         @foreach (var catalogItem in Model.CatalogModel.CatalogItems)
         {
@@ -19,11 +28,12 @@
                 @await Html.PartialAsync("_product", catalogItem)
             </div>
         }
-        @if(Model.CatalogModel.CatalogItems.Count() == 0)
+        @if (Model.CatalogModel.CatalogItems.Count() == 0)
         {
             <div class="text-center">
                 <p>Lamentamos, mas não foram encontrados resultados!</p>
             </div>
         }
     </div>
+    @await Html.PartialAsync("_pagination", Model.CatalogModel.PaginationInfo)
 </div>
