--- a/src/Web/Pages/Product/_productDetail.cshtml
+++ b/src/Web/Pages/Product/_productDetail.cshtml
@@ -61,7 +61,7 @@
         <div class="col-9">
             @foreach (var item in Model.Tags)
             {
-                <a asp-page="/Tag/Index" asp-route-id="@item.Name" asp-route-q="@item.TagName">@item.Name</a>
+                <a asp-page="/Tag/Index" asp-route-tagName="@item.Name" asp-route-q="@item.TagName">@item.Name</a>
                 @if (item != Model.Tags.Last())
                 {
                     <text>,</text>
