--- a/src/Web/Pages/Search/Index.cshtml
+++ b/src/Web/Pages/Search/Index.cshtml
@@ -9,8 +9,21 @@
 <div class="news-heading text-center">
     <img class="separator" src="~/images/coração-rosa.png" />
 </div>
+<section class="esh-catalog-filters">
+    <div class="container">
+        <form method="get">
+            <input type="hidden" name="q" value="@Model.SearchFor" />
+            <label class="esh-catalog-label" data-title="tipo de produto">
+                <select asp-for="@Model.CatalogModel.TypesFilterApplied" asp-items="@Model.CatalogModel.Types" class="esh-catalog-filter"></select>
+            </label>
+            <label class="esh-catalog-label" data-title="ilustração">
+                <select asp-for="@Model.CatalogModel.IllustrationFilterApplied" asp-items="@Model.CatalogModel.Illustrations" class="esh-catalog-filter"></select>
+            </label>
+            <input class="esh-catalog-send pt-1" type="image" src="/images/arrow-right.svg" />
+        </form>
+    </div>
+</section>
 <div class="container">
-
     <div class="esh-catalog-items row">
         @if (Model.CatalogModel.CatalogItems?.Count() > 0)
         {
@@ -29,4 +42,5 @@
             </div>
         }
     </div>
+    @await Html.PartialAsync("_pagination", Model.CatalogModel.PaginationInfo, new ViewDataDictionary(ViewData) { { "SearchFor", Model.SearchFor }, { "TypeId", Model.CatalogModel.TypesFilterApplied }, { "IllustrationId", Model.CatalogModel.IllustrationFilterApplied } })
 </div>
