--- a/src/Web/Pages/Tag/Index.cshtml
+++ b/src/Web/Pages/Tag/Index.cshtml
@@ -10,8 +10,22 @@
 <div class="news-heading text-center">
     <img class="separator" src="~/images/coração-rosa.png" />
 </div>
+<section class="esh-catalog-filters">
+    <div class="container">
+        <form method="get">
+            <input type="hidden" name="tagName" value="@Model.TagName" />
+            <input type="hidden" name="q" value="@Model.Tag" />
+            <label class="esh-catalog-label" data-title="tipo de produto">
+                <select asp-for="@Model.CatalogModel.TypesFilterApplied" asp-items="@Model.CatalogModel.Types" class="esh-catalog-filter"></select>
+            </label>
+            <label class="esh-catalog-label" data-title="ilustração">
+                <select asp-for="@Model.CatalogModel.IllustrationFilterApplied" asp-items="@Model.CatalogModel.Illustrations" class="esh-catalog-filter"></select>
+            </label>
+            <input class="esh-catalog-send pt-1" type="image" src="/images/arrow-right.svg" />
+        </form>
+    </div>
+</section>
 <div class="container">
-
     <div class="esh-catalog-items row">
         @foreach (var catalogItem in Model.CatalogModel.CatalogItems)
         {
@@ -26,5 +40,6 @@
             </div>
         }
     </div>
+    @await Html.PartialAsync("_pagination", Model.CatalogModel.PaginationInfo, new ViewDataDictionary(ViewData) { { "SearchFor", Model.Tag }, { "TagName", Model.TagName },  { "TypeId", Model.CatalogModel.TypesFilterApplied }, { "IllustrationId", Model.CatalogModel.IllustrationFilterApplied } })
 </div>
 
