pagination small changes

--- a/src/Web/Pages/Search/Index.cshtml
+++ b/src/Web/Pages/Search/Index.cshtml
@@ -19,7 +19,7 @@
             <label class="esh-catalog-label" data-title="ilustração">
                 <select asp-for="@Model.CatalogModel.IllustrationFilterApplied" asp-items="@Model.CatalogModel.Illustrations" class="esh-catalog-filter"></select>
             </label>
-            <input class="esh-catalog-send pt-1" type="image" src="/images/arrow-right.svg" />
+            <input class="esh-catalog-send pt-1" type="image" src="~/images/arrow-right.svg" />
         </form>
     </div>
 </section>
