backoffice orders fixes

--- a/src/Backoffice/Pages/Orders/Details.cshtml
+++ b/src/Backoffice/Pages/Orders/Details.cshtml
@@ -102,7 +102,7 @@
         {
             <tr>
                 <td>
-                    <img src="@item.PictureUri" class="img-responsive" />
+                    <img width="200" src="@item.PictureUri" class="img-responsive" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ProductSku)
