--- a/src/Backoffice/Pages/_Layout.cshtml
+++ b/src/Backoffice/Pages/_Layout.cshtml
@@ -40,6 +40,7 @@
                     <li><a asp-page="/Illustrations/Index">Ilustrações</a></li>
                     <li><a asp-page="/Products/Index">Produtos</a></li>
                     <li><a asp-page="/ShopConfig/Index">Loja</a></li>
+                    <li><a asp-page="/Orders/Index">Encomendas</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
