backoffice product get categories service part 2

--- a/src/Backoffice/Pages/Products/Create.cshtml
+++ b/src/Backoffice/Pages/Products/Create.cshtml
@@ -68,13 +68,13 @@
         </div>
         <div class="col-md-offset-2 col-md-4">
             <h4>Categorias</h4>
-            <ul>
+            <ul id="category-list">
                 @for (int i = 0; i < Model.CatalogCategoryModel.Count; i++)
                 {
                     <li class="parent-category">
                         <label asp-for="CatalogCategoryModel[i].Selected">
                             <input type="hidden" asp-for="CatalogCategoryModel[i].CategoryId" />
-                            <input type="checkbox" asp-for="CatalogCategoryModel[i].Selected" class="parent-checkbox" />
+                            <input type="checkbox" asp-for="CatalogCategoryModel[i].Selected" class="parent-checkbox" cat-id="@Model.CatalogCategoryModel[i].CategoryId" />
                             @Model.CatalogCategoryModel[i].Label
                         </label>
 
@@ -86,7 +86,7 @@
                                     <li>
                                         <label asp-for="CatalogCategoryModel[i].Childs[j].Selected">
                                             <input type="hidden" asp-for="CatalogCategoryModel[i].Childs[j].CategoryId" />
-                                            <input type="checkbox" asp-for="CatalogCategoryModel[i].Childs[j].Selected" class="child-checkbox" />
+                                            <input type="checkbox" asp-for="CatalogCategoryModel[i].Childs[j].Selected" class="child-checkbox" cat-id="@Model.CatalogCategoryModel[i].Childs[j].CategoryId" />
                                             @Model.CatalogCategoryModel[i].Childs[j].Label
                                         </label>
                                     </li>
@@ -121,9 +121,15 @@
             });
 
             $('#ProductModel_CatalogTypeId').on('change', function () {
-                console.log('input product Id = ' + this.value);
                 $.getJSON('@(Url.Page("Create","Categories"))' + '&productType=' + this.value, function (data) {
-                    console.log('response: ' + data);
+                    //deselect all checkboxes
+                    $('#category-list input:checkbox').prop('checked', false);
+
+                    if (data) {                        
+                        data.forEach(function (element) {
+                            $('#category-list input[cat-id=' + element + ']').prop('checked', true);
+                        });
+                    }
                 });
             });
         });
